[gd_scene load_steps=17 format=4 uid="uid://dyq16i6wfo2l3"]

[ext_resource type="Texture2D" uid="uid://dbg2sitf2j3d7" path="res://assets/overworld - water and sky.png" id="1_7p8db"]
[ext_resource type="Script" uid="uid://i44sqfhojqux" path="res://flagpole_and_castle.gd" id="1_jic81"]
[ext_resource type="Texture2D" uid="uid://42aso5e5s5ni" path="res://assets/overworld - pipes and scenery.png" id="2_7g8un"]
[ext_resource type="Texture2D" uid="uid://c3m1hoh3ponc2" path="res://assets/overworld-ground and stone.png" id="3_rq3so"]
[ext_resource type="PackedScene" uid="uid://cuwbp6b57kfwg" path="res://flagpole_flag.tscn" id="4_78ygb"]
[ext_resource type="Script" uid="uid://ca2yc6vbqhvnj" path="res://camera_2d_flagpole_and_castle.gd" id="5_t1wby"]
[ext_resource type="PackedScene" uid="uid://pi0lfrwkyf8a" path="res://mario.tscn" id="6_jic81"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7g8un"]
texture = ExtResource("1_7p8db")
separation = Vector2i(1, 1)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0

[sub_resource type="TileSet" id="TileSet_rq3so"]
sources/0 = SubResource("TileSetAtlasSource_7g8un")

[sub_resource type="TileMapPattern" id="TileMapPattern_jic81"]
tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 1, 1, 65536, 0, 65537, 65536, 1, 2, 131072, 0, 65538, 131072, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jowyf"]
texture = ExtResource("1_7p8db")
separation = Vector2i(1, 1)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0

[sub_resource type="TileSet" id="TileSet_uabfr"]
sources/0 = SubResource("TileSetAtlasSource_jowyf")
pattern_0 = SubResource("TileMapPattern_jic81")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rq3so"]
texture = ExtResource("2_7g8un")
separation = Vector2i(1, 1)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:3/0 = 0

[sub_resource type="TileSet" id="TileSet_78ygb"]
physics_layer_0/collision_layer = 1061
physics_layer_0/collision_mask = 1061
sources/0 = SubResource("TileSetAtlasSource_rq3so")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_78ygb"]
texture = ExtResource("3_rq3so")
separation = Vector2i(1, 1)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0

[sub_resource type="TileSet" id="TileSet_xqo2n"]
physics_layer_0/collision_layer = 1061
physics_layer_0/collision_mask = 1057
sources/0 = SubResource("TileSetAtlasSource_78ygb")

[node name="FlagpoleAndCastle" type="Node2D"]
process_mode = 3
script = ExtResource("1_jic81")

[node name="BackgroundSky" type="TileMapLayer" parent="."]
z_index = -2
tile_map_data = PackedByteArray("AAAAAAAAAAADAAEAAAAAAAEAAAADAAEAAAAAAAIAAAADAAEAAAAAAAMAAAADAAEAAAAAAAQAAAADAAEAAAAAAAUAAAADAAEAAAAAAAYAAAADAAEAAAAAAAcAAAADAAEAAAAAAAgAAAADAAEAAAAAAAkAAAADAAEAAAAAAAoAAAADAAEAAAAAAAsAAAADAAEAAAAAAAwAAAADAAEAAAAAAA0AAAADAAEAAAAAAA4AAAADAAEAAAABAAAAAAADAAEAAAABAAEAAAADAAEAAAABAAIAAAADAAEAAAABAAMAAAADAAEAAAABAAQAAAADAAEAAAABAAUAAAADAAEAAAABAAYAAAADAAEAAAABAAcAAAADAAEAAAABAAgAAAADAAEAAAABAAkAAAADAAEAAAABAAoAAAADAAEAAAABAAsAAAADAAEAAAABAAwAAAADAAEAAAABAA0AAAADAAEAAAABAA4AAAADAAEAAAACAAAAAAADAAEAAAACAAEAAAADAAEAAAACAAIAAAADAAEAAAACAAMAAAADAAEAAAACAAQAAAADAAEAAAACAAUAAAADAAEAAAACAAYAAAADAAEAAAACAAcAAAADAAEAAAACAAgAAAADAAEAAAACAAkAAAADAAEAAAACAAoAAAADAAEAAAACAAsAAAADAAEAAAACAAwAAAADAAEAAAACAA0AAAADAAEAAAACAA4AAAADAAEAAAADAAAAAAADAAEAAAADAAEAAAADAAEAAAADAAIAAAADAAEAAAADAAMAAAADAAEAAAADAAQAAAADAAEAAAADAAUAAAADAAEAAAADAAYAAAADAAEAAAADAAcAAAADAAEAAAADAAgAAAADAAEAAAADAAkAAAADAAEAAAADAAoAAAADAAEAAAADAAsAAAADAAEAAAADAAwAAAADAAEAAAADAA0AAAADAAEAAAADAA4AAAADAAEAAAAEAAAAAAADAAEAAAAEAAEAAAADAAEAAAAEAAIAAAADAAEAAAAEAAMAAAADAAEAAAAEAAQAAAADAAEAAAAEAAUAAAADAAEAAAAEAAYAAAADAAEAAAAEAAcAAAADAAEAAAAEAAgAAAADAAEAAAAEAAkAAAADAAEAAAAEAAoAAAADAAEAAAAEAAsAAAADAAEAAAAEAAwAAAADAAEAAAAEAA0AAAADAAEAAAAEAA4AAAADAAEAAAAAAA8AAAADAAEAAAAAABAAAAADAAEAAAAAABEAAAADAAEAAAABAA8AAAADAAEAAAABABAAAAADAAEAAAABABEAAAADAAEAAAACAA8AAAADAAEAAAACABAAAAADAAEAAAACABEAAAADAAEAAAADAA8AAAADAAEAAAADABAAAAADAAEAAAADABEAAAADAAEAAAAEAA8AAAADAAEAAAAEABAAAAADAAEAAAAEABEAAAADAAEAAAAFAAAAAAADAAEAAAAFAAEAAAADAAEAAAAFAAIAAAADAAEAAAAFAAMAAAADAAEAAAAFAAQAAAADAAEAAAAFAAUAAAADAAEAAAAFAAYAAAADAAEAAAAFAAcAAAADAAEAAAAFAAgAAAADAAEAAAAFAAkAAAADAAEAAAAFAAoAAAADAAEAAAAFAAsAAAADAAEAAAAFAAwAAAADAAEAAAAFAA0AAAADAAEAAAAFAA4AAAADAAEAAAAFAA8AAAADAAEAAAAFABAAAAADAAEAAAAFABEAAAADAAEAAAAGAAAAAAADAAEAAAAGAAEAAAADAAEAAAAGAAIAAAADAAEAAAAGAAMAAAADAAEAAAAGAAQAAAADAAEAAAAGAAUAAAADAAEAAAAGAAYAAAADAAEAAAAGAAcAAAADAAEAAAAGAAgAAAADAAEAAAAGAAkAAAADAAEAAAAGAAoAAAADAAEAAAAGAAsAAAADAAEAAAAGAAwAAAADAAEAAAAGAA0AAAADAAEAAAAGAA4AAAADAAEAAAAGAA8AAAADAAEAAAAGABAAAAADAAEAAAAGABEAAAADAAEAAAAHAAAAAAADAAEAAAAHAAEAAAADAAEAAAAHAAIAAAADAAEAAAAHAAMAAAADAAEAAAAHAAQAAAADAAEAAAAHAAUAAAADAAEAAAAHAAYAAAADAAEAAAAHAAcAAAADAAEAAAAHAAgAAAADAAEAAAAHAAkAAAADAAEAAAAHAAoAAAADAAEAAAAHAAsAAAADAAEAAAAHAAwAAAADAAEAAAAHAA0AAAADAAEAAAAHAA4AAAADAAEAAAAHAA8AAAADAAEAAAAHABAAAAADAAEAAAAHABEAAAADAAEAAAAIAAAAAAADAAEAAAAIAAEAAAADAAEAAAAIAAIAAAADAAEAAAAIAAMAAAADAAEAAAAIAAQAAAADAAEAAAAIAAUAAAADAAEAAAAIAAYAAAADAAEAAAAIAAcAAAADAAEAAAAIAAgAAAADAAEAAAAIAAkAAAADAAEAAAAIAAoAAAADAAEAAAAIAAsAAAADAAEAAAAIAAwAAAADAAEAAAAIAA0AAAADAAEAAAAIAA4AAAADAAEAAAAIAA8AAAADAAEAAAAIABAAAAADAAEAAAAIABEAAAADAAEAAAAJAAAAAAADAAEAAAAJAAEAAAADAAEAAAAJAAIAAAADAAEAAAAJAAMAAAADAAEAAAAJAAQAAAADAAEAAAAJAAUAAAADAAEAAAAJAAYAAAADAAEAAAAJAAcAAAADAAEAAAAJAAgAAAADAAEAAAAJAAkAAAADAAEAAAAJAAoAAAADAAEAAAAJAAsAAAADAAEAAAAJAAwAAAADAAEAAAAJAA0AAAADAAEAAAAJAA4AAAADAAEAAAAJAA8AAAADAAEAAAAJABAAAAADAAEAAAAJABEAAAADAAEAAAAKAAAAAAADAAEAAAAKAAEAAAADAAEAAAAKAAIAAAADAAEAAAAKAAMAAAADAAEAAAAKAAQAAAADAAEAAAAKAAUAAAADAAEAAAAKAAYAAAADAAEAAAAKAAcAAAADAAEAAAAKAAgAAAADAAEAAAAKAAkAAAADAAEAAAAKAAoAAAADAAEAAAAKAAsAAAADAAEAAAAKAAwAAAADAAEAAAAKAA0AAAADAAEAAAAKAA4AAAADAAEAAAAKAA8AAAADAAEAAAAKABAAAAADAAEAAAAKABEAAAADAAEAAAALAAAAAAADAAEAAAALAAEAAAADAAEAAAALAAIAAAADAAEAAAALAAMAAAADAAEAAAALAAQAAAADAAEAAAALAAUAAAADAAEAAAALAAYAAAADAAEAAAALAAcAAAADAAEAAAALAAgAAAADAAEAAAALAAkAAAADAAEAAAALAAoAAAADAAEAAAALAAsAAAADAAEAAAALAAwAAAADAAEAAAALAA0AAAADAAEAAAALAA4AAAADAAEAAAALAA8AAAADAAEAAAALABAAAAADAAEAAAALABEAAAADAAEAAAAMAAAAAAADAAEAAAAMAAEAAAADAAEAAAAMAAIAAAADAAEAAAAMAAMAAAADAAEAAAAMAAQAAAADAAEAAAAMAAUAAAADAAEAAAAMAAYAAAADAAEAAAAMAAcAAAADAAEAAAAMAAgAAAADAAEAAAAMAAkAAAADAAEAAAAMAAoAAAADAAEAAAAMAAsAAAADAAEAAAAMAAwAAAADAAEAAAAMAA0AAAADAAEAAAAMAA4AAAADAAEAAAAMAA8AAAADAAEAAAAMABAAAAADAAEAAAAMABEAAAADAAEAAAANAAAAAAADAAEAAAANAAEAAAADAAEAAAANAAIAAAADAAEAAAANAAMAAAADAAEAAAANAAQAAAADAAEAAAANAAUAAAADAAEAAAANAAYAAAADAAEAAAANAAcAAAADAAEAAAANAAgAAAADAAEAAAANAAkAAAADAAEAAAANAAoAAAADAAEAAAANAAsAAAADAAEAAAANAAwAAAADAAEAAAANAA0AAAADAAEAAAANAA4AAAADAAEAAAANAA8AAAADAAEAAAANABAAAAADAAEAAAANABEAAAADAAEAAAAOAAAAAAADAAEAAAAOAAEAAAADAAEAAAAOAAIAAAADAAEAAAAOAAMAAAADAAEAAAAOAAQAAAADAAEAAAAOAAUAAAADAAEAAAAOAAYAAAADAAEAAAAOAAcAAAADAAEAAAAOAAgAAAADAAEAAAAOAAkAAAADAAEAAAAOAAoAAAADAAEAAAAOAAsAAAADAAEAAAAOAAwAAAADAAEAAAAOAA0AAAADAAEAAAAOAA4AAAADAAEAAAAOAA8AAAADAAEAAAAOABAAAAADAAEAAAAOABEAAAADAAEAAAAPAAAAAAADAAEAAAAPAAEAAAADAAEAAAAPAAIAAAADAAEAAAAPAAMAAAADAAEAAAAPAAQAAAADAAEAAAAPAAUAAAADAAEAAAAPAAYAAAADAAEAAAAPAAcAAAADAAEAAAAPAAgAAAADAAEAAAAPAAkAAAADAAEAAAAPAAoAAAADAAEAAAAPAAsAAAADAAEAAAAPAAwAAAADAAEAAAAPAA0AAAADAAEAAAAPAA4AAAADAAEAAAAPAA8AAAADAAEAAAAPABAAAAADAAEAAAAPABEAAAADAAEAAAAQAAAAAAADAAEAAAAQAAEAAAADAAEAAAAQAAIAAAADAAEAAAAQAAMAAAADAAEAAAAQAAQAAAADAAEAAAAQAAUAAAADAAEAAAAQAAYAAAADAAEAAAAQAAcAAAADAAEAAAAQAAgAAAADAAEAAAAQAAkAAAADAAEAAAAQAAoAAAADAAEAAAARAAAAAAADAAEAAAARAAEAAAADAAEAAAARAAIAAAADAAEAAAARAAMAAAADAAEAAAARAAQAAAADAAEAAAARAAUAAAADAAEAAAARAAYAAAADAAEAAAARAAcAAAADAAEAAAARAAgAAAADAAEAAAARAAkAAAADAAEAAAARAAoAAAADAAEAAAASAAAAAAADAAEAAAASAAEAAAADAAEAAAASAAIAAAADAAEAAAASAAMAAAADAAEAAAASAAQAAAADAAEAAAASAAUAAAADAAEAAAASAAYAAAADAAEAAAASAAcAAAADAAEAAAASAAgAAAADAAEAAAASAAkAAAADAAEAAAASAAoAAAADAAEAAAATAAAAAAADAAEAAAATAAEAAAADAAEAAAATAAIAAAADAAEAAAATAAMAAAADAAEAAAATAAQAAAADAAEAAAATAAUAAAADAAEAAAATAAYAAAADAAEAAAATAAcAAAADAAEAAAATAAgAAAADAAEAAAATAAkAAAADAAEAAAATAAoAAAADAAEAAAAUAAAAAAADAAEAAAAUAAEAAAADAAEAAAAUAAIAAAADAAEAAAAUAAMAAAADAAEAAAAUAAQAAAADAAEAAAAUAAUAAAADAAEAAAAUAAYAAAADAAEAAAAUAAcAAAADAAEAAAAUAAgAAAADAAEAAAAUAAkAAAADAAEAAAAUAAoAAAADAAEAAAAVAAAAAAADAAEAAAAVAAEAAAADAAEAAAAVAAIAAAADAAEAAAAVAAMAAAADAAEAAAAVAAQAAAADAAEAAAAVAAUAAAADAAEAAAAVAAYAAAADAAEAAAAVAAcAAAADAAEAAAAVAAgAAAADAAEAAAAVAAkAAAADAAEAAAAVAAoAAAADAAEAAAAQAAsAAAADAAEAAAAQAAwAAAADAAEAAAAQAA0AAAADAAEAAAAQAA4AAAADAAEAAAAQAA8AAAADAAEAAAAQABAAAAADAAEAAAAQABEAAAADAAEAAAARAAsAAAADAAEAAAARAAwAAAADAAEAAAARAA0AAAADAAEAAAARAA4AAAADAAEAAAARAA8AAAADAAEAAAARABAAAAADAAEAAAARABEAAAADAAEAAAASAAsAAAADAAEAAAASAAwAAAADAAEAAAASAA0AAAADAAEAAAASAA4AAAADAAEAAAASAA8AAAADAAEAAAASABAAAAADAAEAAAASABEAAAADAAEAAAATAAsAAAADAAEAAAATAAwAAAADAAEAAAATAA0AAAADAAEAAAATAA4AAAADAAEAAAATAA8AAAADAAEAAAATABAAAAADAAEAAAATABEAAAADAAEAAAAUAAsAAAADAAEAAAAUAAwAAAADAAEAAAAUAA0AAAADAAEAAAAUAA4AAAADAAEAAAAUAA8AAAADAAEAAAAUABAAAAADAAEAAAAUABEAAAADAAEAAAAVAAsAAAADAAEAAAAVAAwAAAADAAEAAAAVAA0AAAADAAEAAAAVAA4AAAADAAEAAAAVAA8AAAADAAEAAAAVABAAAAADAAEAAAAVABEAAAADAAEAAAAWAAAAAAADAAEAAAAWAAEAAAADAAEAAAAWAAIAAAADAAEAAAAWAAMAAAADAAEAAAAWAAQAAAADAAEAAAAWAAUAAAADAAEAAAAWAAYAAAADAAEAAAAWAAcAAAADAAEAAAAWAAgAAAADAAEAAAAWAAkAAAADAAEAAAAWAAoAAAADAAEAAAAWAAsAAAADAAEAAAAWAAwAAAADAAEAAAAWAA0AAAADAAEAAAAWAA4AAAADAAEAAAAWAA8AAAADAAEAAAAWABAAAAADAAEAAAAWABEAAAADAAEAAAAXAAAAAAADAAEAAAAXAAEAAAADAAEAAAAXAAIAAAADAAEAAAAXAAMAAAADAAEAAAAXAAQAAAADAAEAAAAXAAUAAAADAAEAAAAXAAYAAAADAAEAAAAXAAcAAAADAAEAAAAXAAgAAAADAAEAAAAXAAkAAAADAAEAAAAXAAoAAAADAAEAAAAXAAsAAAADAAEAAAAXAAwAAAADAAEAAAAXAA0AAAADAAEAAAAXAA4AAAADAAEAAAAXAA8AAAADAAEAAAAXABAAAAADAAEAAAAXABEAAAADAAEAAAAYAAAAAAADAAEAAAAYAAEAAAADAAEAAAAYAAIAAAADAAEAAAAYAAMAAAADAAEAAAAYAAQAAAADAAEAAAAYAAUAAAADAAEAAAAYAAYAAAADAAEAAAAYAAcAAAADAAEAAAAYAAgAAAADAAEAAAAYAAkAAAADAAEAAAAYAAoAAAADAAEAAAAYAAsAAAADAAEAAAAYAAwAAAADAAEAAAAYAA0AAAADAAEAAAAYAA4AAAADAAEAAAAYAA8AAAADAAEAAAAYABAAAAADAAEAAAAYABEAAAADAAEAAAAZAAAAAAADAAEAAAAZAAEAAAADAAEAAAAZAAIAAAADAAEAAAAZAAMAAAADAAEAAAAZAAQAAAADAAEAAAAZAAUAAAADAAEAAAAZAAYAAAADAAEAAAAZAAcAAAADAAEAAAAZAAgAAAADAAEAAAAZAAkAAAADAAEAAAAZAAoAAAADAAEAAAAZAAsAAAADAAEAAAAZAAwAAAADAAEAAAAZAA0AAAADAAEAAAAZAA4AAAADAAEAAAAZAA8AAAADAAEAAAAZABAAAAADAAEAAAAZABEAAAADAAEAAAAaAAAAAAADAAEAAAAaAAEAAAADAAEAAAAaAAIAAAADAAEAAAAaAAMAAAADAAEAAAAaAAQAAAADAAEAAAAaAAUAAAADAAEAAAAaAAYAAAADAAEAAAAaAAcAAAADAAEAAAAaAAgAAAADAAEAAAAaAAkAAAADAAEAAAAaAAoAAAADAAEAAAAaAAsAAAADAAEAAAAaAAwAAAADAAEAAAAaAA0AAAADAAEAAAAaAA4AAAADAAEAAAAaAA8AAAADAAEAAAAaABAAAAADAAEAAAAaABEAAAADAAEAAAAbAAAAAAADAAEAAAAbAAEAAAADAAEAAAAbAAIAAAADAAEAAAAbAAMAAAADAAEAAAAbAAQAAAADAAEAAAAbAAUAAAADAAEAAAAbAAYAAAADAAEAAAAbAAcAAAADAAEAAAAbAAgAAAADAAEAAAAbAAkAAAADAAEAAAAbAAoAAAADAAEAAAAbAAsAAAADAAEAAAAbAAwAAAADAAEAAAAbAA0AAAADAAEAAAAbAA4AAAADAAEAAAAbAA8AAAADAAEAAAAbABAAAAADAAEAAAAbABEAAAADAAEAAAAcAAAAAAADAAEAAAAcAAEAAAADAAEAAAAcAAIAAAADAAEAAAAcAAMAAAADAAEAAAAcAAQAAAADAAEAAAAcAAUAAAADAAEAAAAcAAYAAAADAAEAAAAcAAcAAAADAAEAAAAcAAgAAAADAAEAAAAcAAkAAAADAAEAAAAcAAoAAAADAAEAAAAcAAsAAAADAAEAAAAcAAwAAAADAAEAAAAcAA0AAAADAAEAAAAcAA4AAAADAAEAAAAcAA8AAAADAAEAAAAcABAAAAADAAEAAAAcABEAAAADAAEAAAAdAAAAAAADAAEAAAAdAAEAAAADAAEAAAAdAAIAAAADAAEAAAAdAAMAAAADAAEAAAAdAAQAAAADAAEAAAAdAAUAAAADAAEAAAAdAAYAAAADAAEAAAAdAAcAAAADAAEAAAAdAAgAAAADAAEAAAAdAAkAAAADAAEAAAAdAAoAAAADAAEAAAAdAAsAAAADAAEAAAAdAAwAAAADAAEAAAAdAA0AAAADAAEAAAAdAA4AAAADAAEAAAAdAA8AAAADAAEAAAAdABAAAAADAAEAAAAdABEAAAADAAEAAAAeAAAAAAADAAEAAAAeAAEAAAADAAEAAAAeAAIAAAADAAEAAAAeAAMAAAADAAEAAAAeAAQAAAADAAEAAAAeAAUAAAADAAEAAAAeAAYAAAADAAEAAAAeAAcAAAADAAEAAAAeAAgAAAADAAEAAAAeAAkAAAADAAEAAAAeAAoAAAADAAEAAAAeAAsAAAADAAEAAAAeAAwAAAADAAEAAAAeAA0AAAADAAEAAAAeAA4AAAADAAEAAAAeAA8AAAADAAEAAAAeABAAAAADAAEAAAAeABEAAAADAAEAAAAfAAAAAAADAAEAAAAfAAEAAAADAAEAAAAfAAIAAAADAAEAAAAfAAMAAAADAAEAAAAfAAQAAAADAAEAAAAfAAUAAAADAAEAAAAfAAYAAAADAAEAAAAfAAcAAAADAAEAAAAfAAgAAAADAAEAAAAfAAkAAAADAAEAAAAfAAoAAAADAAEAAAAfAAsAAAADAAEAAAAfAAwAAAADAAEAAAAfAA0AAAADAAEAAAAfAA4AAAADAAEAAAAfAA8AAAADAAEAAAAfABAAAAADAAEAAAAfABEAAAADAAEAAAAgAAAAAAADAAEAAAAgAAEAAAADAAEAAAAgAAIAAAADAAEAAAAgAAMAAAADAAEAAAAgAAQAAAADAAEAAAAgAAUAAAADAAEAAAAgAAYAAAADAAEAAAAgAAcAAAADAAEAAAAgAAgAAAADAAEAAAAgAAkAAAADAAEAAAAgAAoAAAADAAEAAAAgAAsAAAADAAEAAAAgAAwAAAADAAEAAAAgAA0AAAADAAEAAAAgAA4AAAADAAEAAAAgAA8AAAADAAEAAAAgABAAAAADAAEAAAAgABEAAAADAAEAAAAhAAAAAAADAAEAAAAhAAEAAAADAAEAAAAhAAIAAAADAAEAAAAhAAMAAAADAAEAAAAhAAQAAAADAAEAAAAhAAUAAAADAAEAAAAhAAYAAAADAAEAAAAhAAcAAAADAAEAAAAhAAgAAAADAAEAAAAhAAkAAAADAAEAAAAhAAoAAAADAAEAAAAhAAsAAAADAAEAAAAhAAwAAAADAAEAAAAhAA0AAAADAAEAAAAhAA4AAAADAAEAAAAhAA8AAAADAAEAAAAhABAAAAADAAEAAAAhABEAAAADAAEAAAAiAAAAAAADAAEAAAAiAAEAAAADAAEAAAAiAAIAAAADAAEAAAAiAAMAAAADAAEAAAAiAAQAAAADAAEAAAAiAAUAAAADAAEAAAAiAAYAAAADAAEAAAAiAAcAAAADAAEAAAAiAAgAAAADAAEAAAAiAAkAAAADAAEAAAAiAAoAAAADAAEAAAAiAAsAAAADAAEAAAAiAAwAAAADAAEAAAAiAA0AAAADAAEAAAAiAA4AAAADAAEAAAAiAA8AAAADAAEAAAAiABAAAAADAAEAAAAiABEAAAADAAEAAAAjAAAAAAADAAEAAAAjAAEAAAADAAEAAAAjAAIAAAADAAEAAAAjAAMAAAADAAEAAAAjAAQAAAADAAEAAAAjAAUAAAADAAEAAAAjAAYAAAADAAEAAAAjAAcAAAADAAEAAAAjAAgAAAADAAEAAAAjAAkAAAADAAEAAAAjAAoAAAADAAEAAAAjAAsAAAADAAEAAAAjAAwAAAADAAEAAAAjAA0AAAADAAEAAAAjAA4AAAADAAEAAAAjAA8AAAADAAEAAAAjABAAAAADAAEAAAAjABEAAAADAAEAAAAkAAAAAAADAAEAAAAkAAEAAAADAAEAAAAkAAIAAAADAAEAAAAkAAMAAAADAAEAAAAkAAQAAAADAAEAAAAkAAUAAAADAAEAAAAkAAYAAAADAAEAAAAkAAcAAAADAAEAAAAkAAgAAAADAAEAAAAkAAkAAAADAAEAAAAkAAoAAAADAAEAAAAkAAsAAAADAAEAAAAkAAwAAAADAAEAAAAkAA0AAAADAAEAAAAkAA4AAAADAAEAAAAkAA8AAAADAAEAAAAkABAAAAADAAEAAAAkABEAAAADAAEAAAAlAAAAAAADAAEAAAAlAAEAAAADAAEAAAAlAAIAAAADAAEAAAAlAAMAAAADAAEAAAAlAAQAAAADAAEAAAAlAAUAAAADAAEAAAAlAAYAAAADAAEAAAAlAAcAAAADAAEAAAAlAAgAAAADAAEAAAAlAAkAAAADAAEAAAAlAAoAAAADAAEAAAAlAAsAAAADAAEAAAAlAAwAAAADAAEAAAAlAA0AAAADAAEAAAAlAA4AAAADAAEAAAAlAA8AAAADAAEAAAAlABAAAAADAAEAAAAlABEAAAADAAEAAAAmAAAAAAADAAEAAAAmAAEAAAADAAEAAAAmAAIAAAADAAEAAAAmAAMAAAADAAEAAAAmAAQAAAADAAEAAAAmAAUAAAADAAEAAAAmAAYAAAADAAEAAAAmAAcAAAADAAEAAAAmAAgAAAADAAEAAAAmAAkAAAADAAEAAAAmAAoAAAADAAEAAAAmAAsAAAADAAEAAAAmAAwAAAADAAEAAAAmAA0AAAADAAEAAAAmAA4AAAADAAEAAAAmAA8AAAADAAEAAAAmABAAAAADAAEAAAAmABEAAAADAAEAAAAnAAAAAAADAAEAAAAnAAEAAAADAAEAAAAnAAIAAAADAAEAAAAnAAMAAAADAAEAAAAnAAQAAAADAAEAAAAnAAUAAAADAAEAAAAnAAYAAAADAAEAAAAnAAcAAAADAAEAAAAnAAgAAAADAAEAAAAnAAkAAAADAAEAAAAnAAoAAAADAAEAAAAnAAsAAAADAAEAAAAnAAwAAAADAAEAAAAnAA0AAAADAAEAAAAnAA4AAAADAAEAAAAnAA8AAAADAAEAAAAnABAAAAADAAEAAAAnABEAAAADAAEAAAAoAAAAAAADAAEAAAAoAAEAAAADAAEAAAAoAAIAAAADAAEAAAAoAAMAAAADAAEAAAAoAAQAAAADAAEAAAAoAAUAAAADAAEAAAAoAAYAAAADAAEAAAAoAAcAAAADAAEAAAAoAAgAAAADAAEAAAAoAAkAAAADAAEAAAAoAAoAAAADAAEAAAAoAAsAAAADAAEAAAAoAAwAAAADAAEAAAAoAA0AAAADAAEAAAAoAA4AAAADAAEAAAAoAA8AAAADAAEAAAAoABAAAAADAAEAAAAoABEAAAADAAEAAAApAAAAAAADAAEAAAApAAEAAAADAAEAAAApAAIAAAADAAEAAAApAAMAAAADAAEAAAApAAQAAAADAAEAAAApAAUAAAADAAEAAAApAAYAAAADAAEAAAApAAcAAAADAAEAAAApAAgAAAADAAEAAAApAAkAAAADAAEAAAApAAoAAAADAAEAAAApAAsAAAADAAEAAAApAAwAAAADAAEAAAApAA0AAAADAAEAAAApAA4AAAADAAEAAAApAA8AAAADAAEAAAApABAAAAADAAEAAAApABEAAAADAAEAAAAqAAAAAAADAAEAAAAqAAEAAAADAAEAAAAqAAIAAAADAAEAAAAqAAMAAAADAAEAAAAqAAQAAAADAAEAAAAqAAUAAAADAAEAAAAqAAYAAAADAAEAAAAqAAcAAAADAAEAAAAqAAgAAAADAAEAAAAqAAkAAAADAAEAAAAqAAoAAAADAAEAAAAqAAsAAAADAAEAAAAqAAwAAAADAAEAAAAqAA0AAAADAAEAAAAqAA4AAAADAAEAAAAqAA8AAAADAAEAAAAqABAAAAADAAEAAAAqABEAAAADAAEAAAArAAAAAAADAAEAAAArAAEAAAADAAEAAAArAAIAAAADAAEAAAArAAMAAAADAAEAAAArAAQAAAADAAEAAAArAAUAAAADAAEAAAArAAYAAAADAAEAAAArAAcAAAADAAEAAAArAAgAAAADAAEAAAArAAkAAAADAAEAAAArAAoAAAADAAEAAAArAAsAAAADAAEAAAArAAwAAAADAAEAAAArAA0AAAADAAEAAAArAA4AAAADAAEAAAArAA8AAAADAAEAAAArABAAAAADAAEAAAArABEAAAADAAEAAAAsAAAAAAADAAEAAAAsAAEAAAADAAEAAAAsAAIAAAADAAEAAAAsAAMAAAADAAEAAAAsAAQAAAADAAEAAAAsAAUAAAADAAEAAAAsAAYAAAADAAEAAAAsAAcAAAADAAEAAAAsAAgAAAADAAEAAAAsAAkAAAADAAEAAAAsAAoAAAADAAEAAAAsAAsAAAADAAEAAAAsAAwAAAADAAEAAAAsAA0AAAADAAEAAAAsAA4AAAADAAEAAAAsAA8AAAADAAEAAAAsABAAAAADAAEAAAAsABEAAAADAAEAAAAtAAAAAAADAAEAAAAtAAEAAAADAAEAAAAtAAIAAAADAAEAAAAtAAMAAAADAAEAAAAtAAQAAAADAAEAAAAtAAUAAAADAAEAAAAtAAYAAAADAAEAAAAtAAcAAAADAAEAAAAtAAgAAAADAAEAAAAtAAkAAAADAAEAAAAtAAoAAAADAAEAAAAtAAsAAAADAAEAAAAtAAwAAAADAAEAAAAtAA0AAAADAAEAAAAtAA4AAAADAAEAAAAtAA8AAAADAAEAAAAtABAAAAADAAEAAAAtABEAAAADAAEAAAA=")
tile_set = SubResource("TileSet_rq3so")

[node name="Clouds" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAAMAAAAAAAAAAAABAAQAAAAAAAEAAAACAAMAAAABAAAAAAACAAQAAAABAAEAAAADAAMAAAACAAAAAAADAAQAAAACAAEAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAEAAAAJAAIAAAACAAAAAAAJAAMAAAACAAEAAAAVAAQAAAAAAAEAAAAVAAMAAAAAAAAAAAAWAAMAAAABAAAAAAAXAAMAAAACAAAAAAAXAAQAAAACAAEAAAAWAAQAAAABAAEAAAA=")
tile_set = SubResource("TileSet_uabfr")

[node name="Pipe" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAAwAAAAHAAEAAAACAAwAAAAIAAEAAAABAAsAAAAHAAAAAAACAAsAAAAIAAAAAAARAAsAAAAIAAMAAAARAAoAAAAIAAMAAAARAAkAAAAIAAMAAAARAAgAAAAIAAMAAAARAAcAAAAIAAMAAAARAAYAAAAIAAMAAAARAAUAAAAIAAMAAAARAAQAAAAIAAMAAAARAAMAAAAIAAMAAAARAAIAAAAIAAMAAAARAAEAAAAIAAIAAAA=")
tile_set = SubResource("TileSet_78ygb")

[node name="Bricks" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAA0AAAAAAAAAAAAAAA4AAAAAAAAAAAABAA0AAAAAAAAAAAABAA4AAAAAAAAAAAACAA0AAAAAAAAAAAACAA4AAAAAAAAAAAADAA0AAAAAAAAAAAADAA4AAAAAAAAAAAAEAA0AAAAAAAAAAAAEAA4AAAAAAAAAAAAFAA0AAAAAAAAAAAAFAA4AAAAAAAAAAAAGAA0AAAAAAAAAAAAGAA4AAAAAAAAAAAAHAA0AAAAAAAAAAAAHAA4AAAAAAAAAAAAIAA0AAAAAAAAAAAAIAA4AAAAAAAAAAAAJAA0AAAAAAAAAAAAJAA4AAAAAAAAAAAAKAA0AAAAAAAAAAAAKAA4AAAAAAAAAAAALAA0AAAAAAAAAAAALAA4AAAAAAAAAAAAMAA0AAAAAAAAAAAAMAA4AAAAAAAAAAAANAA0AAAAAAAAAAAANAA4AAAAAAAAAAAAOAA0AAAAAAAAAAAAOAA4AAAAAAAAAAAAPAA0AAAAAAAAAAAAPAA4AAAAAAAAAAAADAAwAAAAAAAEAAAAEAAsAAAAAAAEAAAAEAAwAAAAAAAEAAAAFAAoAAAAAAAEAAAAFAAsAAAAAAAEAAAAFAAwAAAAAAAEAAAAGAAkAAAAAAAEAAAAGAAoAAAAAAAEAAAAGAAsAAAAAAAEAAAAGAAwAAAAAAAEAAAAHAAgAAAAAAAEAAAAHAAkAAAAAAAEAAAAHAAoAAAAAAAEAAAAHAAsAAAAAAAEAAAAHAAwAAAAAAAEAAAAIAAcAAAAAAAEAAAAIAAgAAAAAAAEAAAAIAAkAAAAAAAEAAAAIAAoAAAAAAAEAAAAIAAsAAAAAAAEAAAAIAAwAAAAAAAEAAAAJAAYAAAAAAAEAAAAJAAcAAAAAAAEAAAAJAAgAAAAAAAEAAAAJAAkAAAAAAAEAAAAJAAoAAAAAAAEAAAAJAAsAAAAAAAEAAAAJAAwAAAAAAAEAAAAKAAwAAAAAAAEAAAAKAAsAAAAAAAEAAAAKAAoAAAAAAAEAAAAKAAkAAAAAAAEAAAAKAAgAAAAAAAEAAAAKAAcAAAAAAAEAAAAKAAYAAAAAAAEAAAARAAwAAAAAAAEAAAAQAA0AAAAAAAAAAAAQAA4AAAAAAAAAAAARAA0AAAAAAAAAAAARAA4AAAAAAAAAAAASAA0AAAAAAAAAAAASAA4AAAAAAAAAAAATAA0AAAAAAAAAAAATAA4AAAAAAAAAAAAUAA0AAAAAAAAAAAAUAA4AAAAAAAAAAAAVAA0AAAAAAAAAAAAVAA4AAAAAAAAAAAAWAA0AAAAAAAAAAAAWAA4AAAAAAAAAAAAXAA0AAAAAAAAAAAAXAA4AAAAAAAAAAAAYAA0AAAAAAAAAAAAYAA4AAAAAAAAAAAAZAA0AAAAAAAAAAAAZAA4AAAAAAAAAAAAaAA0AAAAAAAAAAAAaAA4AAAAAAAAAAAAbAA0AAAAAAAAAAAAbAA4AAAAAAAAAAAAcAA0AAAAAAAAAAAAcAA4AAAAAAAAAAAAdAA0AAAAAAAAAAAAdAA4AAAAAAAAAAAAeAA0AAAAAAAAAAAAeAA4AAAAAAAAAAAAfAA0AAAAAAAAAAAAfAA4AAAAAAAAAAAAgAA0AAAAAAAAAAAAgAA4AAAAAAAAAAAAhAA0AAAAAAAAAAAAhAA4AAAAAAAAAAAAiAA0AAAAAAAAAAAAiAA4AAAAAAAAAAAAjAA0AAAAAAAAAAAAjAA4AAAAAAAAAAAAkAA0AAAAAAAAAAAAkAA4AAAAAAAAAAAAlAA0AAAAAAAAAAAAlAA4AAAAAAAAAAAAmAA0AAAAAAAAAAAAmAA4AAAAAAAAAAAAnAA0AAAAAAAAAAAAnAA4AAAAAAAAAAAAZAAwAAAAEAAEAAAAZAAsAAAAEAAEAAAAaAAwAAAAEAAEAAAAaAAsAAAAEAAEAAAAbAAwAAAAGAAEAAAAbAAsAAAAGAAAAAAAcAAwAAAAEAAEAAAAdAAwAAAAEAAEAAAAdAAsAAAAEAAEAAAAcAAsAAAAEAAEAAAAZAAoAAAAEAAAAAAAdAAoAAAAEAAAAAAAaAAoAAAAFAAAAAAAbAAoAAAAFAAAAAAAcAAoAAAAFAAAAAAAaAAkAAAADAAEAAAAbAAkAAAAEAAEAAAAcAAkAAAAFAAEAAAAaAAgAAAAEAAAAAAAbAAgAAAAEAAAAAAAcAAgAAAAEAAAAAAAoAA0AAAAAAAAAAAAoAA4AAAAAAAAAAAApAA0AAAAAAAAAAAApAA4AAAAAAAAAAAAqAA0AAAAAAAAAAAAqAA4AAAAAAAAAAAArAA0AAAAAAAAAAAArAA4AAAAAAAAAAAAsAA0AAAAAAAAAAAAsAA4AAAAAAAAAAAAtAA0AAAAAAAAAAAAtAA4AAAAAAAAAAAA=")
tile_set = SubResource("TileSet_xqo2n")

[node name="FlagpoleFlag" parent="." instance=ExtResource("4_78ygb")]
process_mode = 3
position = Vector2(270, 40)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(127, 121)
script = ExtResource("5_t1wby")

[node name="Mario" parent="." instance=ExtResource("6_jic81")]
position = Vector2(34, 190)

[connection signal="camera_stop" from="." to="Camera2D" method="_on_flagpole_and_castle_camera_stop"]
[connection signal="mario_grabbed_pole" from="FlagpoleFlag" to="." method="_on_flagpole_flag_mario_grabbed_pole"]
[connection signal="mario_grabbed_pole" from="FlagpoleFlag" to="Mario" method="_on_flagpole_flag_mario_grabbed_pole"]
[connection signal="start_stage_clear_music" from="FlagpoleFlag" to="." method="_on_flagpole_flag_start_stage_clear_music"]
[connection signal="camera_stop" from="Mario" to="." method="_on_mario_camera_stop"]
[connection signal="mario_in_castle" from="Mario" to="." method="_on_mario_mario_in_castle"]
[connection signal="mario_in_castle" from="Mario" to="FlagpoleFlag" method="_on_mario_mario_in_castle"]
[connection signal="start_playing_regular_music" from="Mario" to="." method="_on_mario_start_playing_regular_music"]
